Removed unnecessary --add-reads directives